[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
openssl = { version = "0.10", features = ["vendored"] }
hyper = {version = "1.5.1", features = ["full"]}
sqlx = { version = "0.8.2", features = ["postgres","runtime-tokio-native-tls"] }
tokio = {version = "1.41.1", features = ["full"]}
tower = "0.5.1"
